--- a/source/kCura.IntegrationPoints.Web/Content/import-preview.css
+++ b/source/kCura.IntegrationPoints.Web/Content/import-preview.css
@@ -1,4 +1,10 @@
 ﻿/* Pagination*/
+
+#pag-number {
+    width: 30px;
+    text-align: right;
+}
+
 .pagination-controls {
     float: right;
     display: block;
