--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
@@ -11,11 +11,11 @@
             <span class="pagination-controls">
                 <span class="pag-text">Items</span>
                 <input id="pag-number" value="0" />
-                <span class="pag-text"></span>
-                <span class="pag-text">in sets of </span>
+                <span class="pag-items">-</span>
                 <span class="itemCountContainer">
                     <select id="itemsPerPageSelect">
                         <option value="1">1</option>
+                        <option value="4">4</option>
                         <option value="10">10</option>
                         <option selected value="15">15</option>
                         <option value="25">25</option>
