--- a/source/kCura.IntegrationPoints.Web/Content/jstree-fluid.css
+++ b/source/kCura.IntegrationPoints.Web/Content/jstree-fluid.css
@@ -113,6 +113,11 @@ i.jstree-themeicon.jstree-themeicon-custom {
 	color: #1e5495;
 }
 
+.jstree-root-folder:before{
+    content: 'S';
+    color: #f59c1f;
+}
+
 .jstree-folder-root::before {
     content: 'S';
     color: #f59c1f;
