REL-108374: Finished paging and binding buttons to jQuery DataTables

--- a/source/kCura.IntegrationPoints.Web/Content/import-preview.css
+++ b/source/kCura.IntegrationPoints.Web/Content/import-preview.css
@@ -1,8 +1,8 @@
 ﻿/* Pagination*/
 
-#pag-number {
+#row-number {
     width: 30px;
-    text-align: right;
+    text-align: center;
 }
 
 .pagination-controls {
