--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
@@ -10,7 +10,7 @@
             <p class="card-header inventory-card-header">Preview File</p>
             <span class="pagination-controls">
                 <span class="pag-text">Items</span>
-                <input id="pag-number" value="0" />
+                <input id="row-number" value="0" />
                 <span class="pag-items">-</span>
                 <span class="itemCountContainer">
                     <select id="itemsPerPageSelect">
