REL-108383: grabbing workSpaceId and hidding for set up for progress bar

--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
@@ -4,6 +4,10 @@
 
 <link href="~/Content/import-preview.css" rel="stylesheet" />
 
+<div style="display: none">
+   <span id="workSpaceId">@ViewBag.workSpaceId</span>
+</div>
+
 <div class="card" id="step-progress-container">
     <p class="card-header">
         <span>Load File Summary</span>
