REL-108383 Adding javascript and service code to ImportPreview to retrieve progress updates and display real preview data; small changes to class names in ImportPreview view and css

--- a/source/kCura.IntegrationPoints.Web/Content/import-preview.css
+++ b/source/kCura.IntegrationPoints.Web/Content/import-preview.css
@@ -93,12 +93,12 @@
 }
 
 /*Preview and sid navigation section*/
-.inventory-card-header {
+.preview-card-header {
     float: left;
     clear: both;
 }
 
-.inventory-card-footer {
+.preview-card-footer {
     overflow: auto;
 }
 
