--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
@@ -5,7 +5,7 @@
 <link href="~/Content/import-preview.css" rel="stylesheet" />
 
 <div style="display: none">
-   <span id="workSpaceId">@ViewBag.workSpaceId</span>
+   <span id="workspaceId">@ViewBag.workSpaceId</span>
 </div>
 
 <div class="card" id="step-progress-container">
@@ -72,10 +72,10 @@
     </div>
 </div>
 
-<div class="row" id="file-inventory-table-row">
+<div class="row">
     <div class="card">
-        <div class="aspera-card-header">
-            <p class="card-header inventory-card-header">Records</p>
+        <div>
+            <p class="card-header preview-card-header">Records</p>
             <span class="pagination-controls">
                 <span class="pag-text">Items</span>
                 <input id="row-number" value="0" />
