--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
@@ -124,7 +124,7 @@
 
 
     <script src="~/Scripts/Import/import-setup.js"></script>
+    <script src="~/Scripts/Import/import-model.js"></script>
     <script src="~/Scripts/Import/import-provider-settings-step.js"></script>
-
 
 }
