--- a/source/kCura.IntegrationPoints.Web/Content/import.css
+++ b/source/kCura.IntegrationPoints.Web/Content/import.css
@@ -25,7 +25,7 @@
     width: inherit;
 }
 
-#importCustomButton > #dd-previewFile:hover, #dd-previewErrors:hover, #dd-previewChoiceFolder:hover {
+#dd-previewErrors:hover, #dd-previewChoiceFolder:hover, #dd-previewFile:hover {
     font-weight: bold;
     color: white;
     background: linear-gradient(#007fc6, #0063ae);
