--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
@@ -92,7 +92,7 @@
                                 File Encoding:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-fileEncoding" data-bind="select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-fileEncoding" data-bind="options: $root.asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
