--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
@@ -92,7 +92,7 @@
                                 File Encoding:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-fileEncoding" data-bind="options: $root.asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-fileEncoding" data-bind="select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
@@ -104,7 +104,7 @@
                                 Column:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-column" data-bind="select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-column" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', value: select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
@@ -116,7 +116,7 @@
                                 Quote:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-quote" data-bind="select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-quote" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
@@ -128,7 +128,7 @@
                                 Newline:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-newline" data-bind="select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-newline" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
@@ -140,7 +140,7 @@
                                 Multi-Value:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-multiValue" data-bind="select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-multiValue" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
@@ -152,7 +152,7 @@
                                 Nested Value:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-nestedValue" data-bind="select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-nestedValue" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
@@ -165,8 +165,8 @@
                             </div>
                             <div class="field-value">
                                 @**Todo: add css space here to line up with the label*@
-                                <input type="radio" name="firstLineHasColNames" value="true"/> Yes<br/>
-                                <input type="radio" name="firstLineHasColNames" value="false"/> No
+                                <input type="radio" name="firstLineHasColNames" value="true" /> Yes<br />
+                                <input type="radio" name="firstLineHasColNames" value="false" /> No
                             </div>
                         </div>
                     </td>
@@ -188,6 +188,7 @@
             </table>
         </div>
     </div>
+    <br />
 </div>
 
 @section scripts
