REL-109122 Adding exception handling to preview

--- a/source/kCura.IntegrationPoints.Web/Content/import-preview.css
+++ b/source/kCura.IntegrationPoints.Web/Content/import-preview.css
@@ -898,3 +898,6 @@ span.progress-bar-percentage {
 .active-transfer-status-active {
     color: #000000;
 }
+.active-transfer-status-failed {
+    color: #fa4d4d;
+}
