REL-108410: Ascii Delimiters drop-down default - testing

--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
@@ -104,7 +104,7 @@
                                 Column:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-column" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', value: select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-column" data-bind="options: columnAsciiDelimiters, optionsText: 'asciiText', optionsValue: selectedColumnAsciiDelimiter, select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
