--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
@@ -104,7 +104,7 @@
                                 Column:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-column" data-bind="options: columnAsciiDelimiters, optionsText: 'asciiText', optionsValue: selectedColumnAsciiDelimiter, select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-column" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', value: selectedColumnAsciiDelimiter, select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
@@ -116,7 +116,7 @@
                                 Quote:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-quote" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-quote" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', value: selectedQuoteAsciiDelimiter, select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
@@ -128,7 +128,7 @@
                                 Newline:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-newline" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-newline" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', value: selectedNewLineAsciiDelimiter,  select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
@@ -140,7 +140,7 @@
                                 Multi-Value:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-multiValue" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-multiValue" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', value: selectedMultiLineAsciiDelimiter, select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
@@ -152,7 +152,7 @@
                                 Nested Value:
                             </div>
                             <div class="field-value select2-double-width">
-                                <select class="fluid-mock-select" id="import-nestedValue" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', select2: { width: '100%' }"></select>
+                                <select class="fluid-mock-select" id="import-nestedValue" data-bind="options: asciiDelimiters, optionsText: 'asciiText', optionsValue: 'asciiID', value: selectedNestedValueAsciiDelimiter, select2: { width: '100%' }"></select>
                             </div>
                         </div>
                     </td>
