REL-96747 Name exported files after production - RIP part

--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -191,7 +191,7 @@
 							</div>
 						</td>
 						<td style="vertical-align: text-top;">
-							<div data-bind="visible: IsProductionExport()">
+							<div>
 								<div class="field-row">
 									<div class="field-label required">
 										Name Output Files After:
